@@ -1,3 +1,8 @@
+  29 Dec 2014; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-3.3.4.ebuild,
+  ovirt-engine-3.4.0.ebuild, ovirt-engine-3.4.1.ebuild,
+  ovirt-engine-3.4.9999.ebuild, ovirt-engine-9999.ebuild:
+  Modify postgresql package name
+
   18 Aug 2014; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
   add patternfly dependency
 
